# mnist_mlops

./: data.py  main.py  model.pt  model.py  pyproject.toml  trainer.dockerfile
.dvc/tmp/: lock
.github/workflows/: tests.yml
tests/: __init__.py  test_data.py  test_model.py  test_training.py
